[17.November 2008]
- Menu.new optionally yields the new object (similar e.g. to File.open)